--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -51,6 +51,8 @@ jobs:
           wget -O /tmp/miyoomini-toolchain.tar.xz https://github.com/djdiskmachine/miyoomini-toolchain-buildroot/releases/download/1.0.0/miyoomini-toolchain.tar.xz
           mkdir /opt/miyoomini-toolchain
           tar -xvf /tmp/miyoomini-toolchain.tar.xz -C /opt/miyoomini-toolchain  --strip-components=1
+          python -m pip install --upgrade pip
+          pip install Pillow
 
       - name: Build Miyoo Mini
         working-directory: projects
