Build version naming changes
Build number is now X.Y.Z instead of XY_Z
Include Python deps to build instructions
Build job removes resources zip and folder

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,7 @@ jobs:
           curl -L -o lgpt-resources.zip https://github.com/djdiskmachine/lgpt-resources/archive/refs/tags/1.0.zip
           unzip lgpt-resources.zip
           mv lgpt-resources-1.0/*/ ./resources/packaging
-          rm -rf lgpt-resources-1.0*
+          rm -rf lgpt-resources*
           ./resources/packaging/lgpt_package.sh
 
       - name: Extract Git tag name
@@ -90,7 +90,7 @@ jobs:
           curl -L -o lgpt-resources.zip https://github.com/djdiskmachine/lgpt-resources/archive/refs/tags/1.0.zip
           unzip lgpt-resources.zip
           mv lgpt-resources-1.0/*/ ./resources/packaging
-          rm -rf lgpt-resources-1.0*
+          rm -rf lgpt-resources*
           ./resources/packaging/lgpt_package.sh
 
       - name: Extract Git tag name
@@ -136,7 +136,7 @@ jobs:
           curl -L -o lgpt-resources.zip https://github.com/djdiskmachine/lgpt-resources/archive/refs/tags/1.0.zip
           unzip lgpt-resources.zip
           mv lgpt-resources-1.0/*/ ./resources/packaging
-          rm -rf lgpt-resources-1.0*
+          rm -rf lgpt-resources*
           ./resources/packaging/lgpt_package.sh
 
       - name: Extract Git tag name
@@ -176,7 +176,7 @@ jobs:
           curl -L -o lgpt-resources.zip https://github.com/djdiskmachine/lgpt-resources/archive/refs/tags/1.0.zip
           unzip lgpt-resources.zip
           mv lgpt-resources-1.0/*/ ./resources/packaging
-          rm -rf lgpt-resources-1.0*
+          rm -rf lgpt-resources*
           ./resources/packaging/lgpt_package.sh
 
       - name: Extract Git tag name
@@ -216,7 +216,7 @@ jobs:
           curl -L -o lgpt-resources.zip https://github.com/djdiskmachine/lgpt-resources/archive/refs/tags/1.0.zip
           unzip lgpt-resources.zip
           mv lgpt-resources-1.0/*/ ./resources/packaging
-          rm -rf lgpt-resources-1.0*
+          rm -rf lgpt-resources*
           ./resources/packaging/lgpt_package.sh
 
       - name: Extract Git tag name
