--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install build deps
-        run: choco install -y directx-sdk zip --no-progress --yes
+        run: |
+          python -m pip install --upgrade pip
+          pip install Pillow
+          choco install -y directx-sdk zip --no-progress --yes
         shell: powershell
 
       - name: Download and Extract VCE9 release
@@ -43,7 +46,12 @@ jobs:
       - name: Package build
         shell: bash
         working-directory: projects
-        run: ./resources/packaging/lgpt_package.sh
+        run: |
+          curl -L -o lgpt-resources.zip https://github.com/djdiskmachine/lgpt-resources/archive/refs/tags/1.0.zip
+          unzip lgpt-resources.zip
+          mv lgpt-resources-1.0/*/ ./resources/packaging
+          rm -rf lgpt-resources*
+          ./resources/packaging/lgpt_package.sh
 
       - name: Extract Git tag name
         id: extract_tag
@@ -66,6 +74,8 @@ jobs:
       
       - name: Install required libraries
         run: |
+          python -m pip install --upgrade pip
+          pip install Pillow
           sudo dpkg --add-architecture i386
           sudo apt update
           sudo apt install -y make gcc-multilib g++-multilib libsdl1.2-dev:i386 libasound2-plugins:i386 libjack-dev:i386
@@ -76,7 +86,12 @@ jobs:
 
       - name: Package build
         working-directory: projects
-        run: ./resources/packaging/lgpt_package.sh
+        run: |
+          curl -L -o lgpt-resources.zip https://github.com/djdiskmachine/lgpt-resources/archive/refs/tags/1.0.zip
+          unzip lgpt-resources.zip
+          mv lgpt-resources-1.0/*/ ./resources/packaging
+          rm -rf lgpt-resources*
+          ./resources/packaging/lgpt_package.sh
 
       - name: Extract Git tag name
         id: extract_tag
@@ -101,6 +116,8 @@ jobs:
 
       - name: Install required libraries
         run: |
+          python -m pip install --upgrade pip
+          pip install Pillow
           sudo apt update
           sudo apt install -y build-essential cmake pkgconf libusb-0.1-4 libgpgme11 libarchive-tools fakeroot
 
@@ -115,7 +132,12 @@ jobs:
 
       - name: Package build
         working-directory: projects
-        run: ./resources/packaging/lgpt_package.sh
+        run: |
+          curl -L -o lgpt-resources.zip https://github.com/djdiskmachine/lgpt-resources/archive/refs/tags/1.0.zip
+          unzip lgpt-resources.zip
+          mv lgpt-resources-1.0/*/ ./resources/packaging
+          rm -rf lgpt-resources*
+          ./resources/packaging/lgpt_package.sh
 
       - name: Extract Git tag name
         id: extract_tag
@@ -138,6 +160,8 @@ jobs:
 
       - name: Install Miyoo Mini toolchain
         run: |
+          python -m pip install --upgrade pip
+          pip install Pillow
           wget -O /tmp/miyoomini-toolchain.tar.xz https://github.com/djdiskmachine/miyoomini-toolchain-buildroot/releases/download/1.0.0/miyoomini-toolchain.tar.xz
           mkdir /opt/miyoomini-toolchain
           tar -xvf /tmp/miyoomini-toolchain.tar.xz -C /opt/miyoomini-toolchain  --strip-components=1
@@ -148,7 +172,12 @@ jobs:
 
       - name: Package build
         working-directory: projects
-        run: ./resources/packaging/lgpt_package.sh
+        run: |
+          curl -L -o lgpt-resources.zip https://github.com/djdiskmachine/lgpt-resources/archive/refs/tags/1.0.zip
+          unzip lgpt-resources.zip
+          mv lgpt-resources-1.0/*/ ./resources/packaging
+          rm -rf lgpt-resources*
+          ./resources/packaging/lgpt_package.sh
 
       - name: Extract Git tag name
         id: extract_tag
@@ -162,3 +191,85 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           tag_name: ${{ steps.extract_tag.outputs.tag_name }}
           files: ./projects/*.zip
+
+  build-bittboy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Install Bittboy toolchain
+        run: |
+          python -m pip install --upgrade pip
+          pip install Pillow
+          wget -O /tmp/arm-buildroot-linux-musleabi_sdk-buildroot.tar.xz https://github.com/djdiskmachine/MiyooMini-toolchain/releases/download/toolchain/miyoo-toolchain-v2.0.0-arm-buildroot-linux-musleabi_sdk-buildroot.tar.gz
+          mkdir /opt/arm-buildroot-linux-musleabi_sdk-buildroot
+          tar -xvf /tmp/arm-buildroot-linux-musleabi_sdk-buildroot.tar.xz -C /opt/arm-buildroot-linux-musleabi_sdk-buildroot  --strip-components=1
+
+      - name: Build Bittboy
+        working-directory: projects
+        run: make PLATFORM=BITTBOY
+
+      - name: Package build
+        working-directory: projects
+        run: |
+          curl -L -o lgpt-resources.zip https://github.com/djdiskmachine/lgpt-resources/archive/refs/tags/1.0.zip
+          unzip lgpt-resources.zip
+          mv lgpt-resources-1.0/*/ ./resources/packaging
+          rm -rf lgpt-resources*
+          ./resources/packaging/lgpt_package.sh
+
+      - name: Extract Git tag name
+        id: extract_tag
+        run: echo "::set-output name=tag_name::${GITHUB_REF#refs/tags/}"
+        env:
+          GITHUB_REF: ${{ github.ref }}
+
+      - name: Upload build release
+        uses: softprops/action-gh-release@v2
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          tag_name: ${{ steps.extract_tag.outputs.tag_name }}
+          files: ./projects/*.zip
+
+  build-rg35xx:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Clone and build LGPT
+        run: |
+          docker run -d --name rg35xx-container -v "$(pwd)/workspace:/root/workspace" aveferrum/rg35xx-toolchain sleep infinity
+          docker exec rg35xx-container bash -c "
+            apt update && apt install -y python3 python3-pillow
+            git clone https://github.com/djdiskmachine/LittleGPTracker.git
+            cd LittleGPTracker/projects
+            git checkout rg35xx_MIDI
+            make PLATFORM=RG35XX
+          "
+          sudo chmod -R 777 ./workspace/LittleGPTracker/projects
+          sudo chown -R root:root ./workspace/LittleGPTracker/projects
+
+      - name: Package build
+        working-directory: ./workspace/LittleGPTracker/projects
+        run: |
+          curl -L -o lgpt-resources.zip https://github.com/djdiskmachine/lgpt-resources/archive/refs/tags/1.0.zip
+          unzip lgpt-resources.zip
+          mv lgpt-resources-1.0/*/ ./resources/packaging
+          rm -rf lgpt-resources*
+          ./resources/packaging/lgpt_package.sh
+
+      - name: Extract Git tag name
+        id: extract_tag
+        run: echo "::set-output name=tag_name::${GITHUB_REF#refs/tags/}"
+        env:
+          GITHUB_REF: ${{ github.ref }}
+
+      - name: Upload build release
+        uses: softprops/action-gh-release@v2
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          tag_name: ${{ steps.extract_tag.outputs.tag_name }}
+          files: ./workspace/LittleGPTracker/projects/*.zip
