--- a/projects/Makefile.X64
+++ b/projects/Makefile.X64
@@ -2,10 +2,10 @@
 
 # config
 DEFINES := \
+        -D_64BIT \
 	-DCPP_MEMORY \
 	-D__LINUX_ALSA__ \
 	-D__LINUX_ALSASEQ__ \
-	-D_64BIT \
         -DSDL2 \
         -DSDLAUDIO \
         -DDUMMYMIDI
@@ -18,7 +18,11 @@ SDL_CFLAGS := $(shell pkg-config sdl2 --cflags)
 SDL_LIBS := $(shell pkg-config sdl2 --libs)
 
 # optimization
-CFLAGS := $(DEFINES) -g -O3 -Wall $(ALSA_CFLAGS) $(JACK_CFLAGS) $(SDL_CFLAGS) -I$(PWD)/../sources
+OPT_FLAGS := -O3
+#For debugging
+OPT_FLAGS := -g
+INCLUDES := $(ALSA_CFLAGS) $(JACK_CFLAGS) $(SDL_CFLAGS) -I$(PWD)/../sources
+CFLAGS := $(OPT_FLAGS) $(DEFINES) $(INCLUDES) -Wall
 CXXFLAGS := $(CFLAGS) -std=gnu++03
 LIBS := $(ALSA_LIBS) $(JACK_LIBS) $(SDL_LIBS)
 OUTPUT := ../lgpt
