Console Makefile cleanup/fix
* Fix a regression with midi/audio files being included in some
  makefiles
* Remove PLUSH we already have RG35XX
* Partially add RG35XXS for running on the Stock ROM with SDL2
  Support

--- a/projects/Makefile
+++ b/projects/Makefile
@@ -4,7 +4,7 @@
 .SUFFIXES:
 #---------------------------------------------------------------------------------
 
-PLATFORM := X64
+PLATFORM := RASPI
 FONT := original.bmp
 include $(PWD)/Makefile.$(PLATFORM)
 
@@ -106,6 +106,7 @@ SDL2AUDIODIRS := \
 BEAGLEBOARDDIRS := $(LINUXDIRS) $(DUMMYMIDIDIRS) $(RTAUDIODIRS) $(SDLDIRS)
 DEBDIRS := $(DBDIRS) $(JACKDIRS) $(RTAUDIODIRS) $(RTMIDIDIRS) $(SDLDIRS)
 RASPIDIRS := $(LINUXDIRS) $(JACKDIRS) $(RTAUDIODIRS) $(RTMIDIDIRS) $(SDLDIRS)
+RG35XXSDIRS := $(LINUXDIRS) $(DUMMYMIDIDIRS) $(SDL2DIRS) $(SDL2AUDIODIRS)
 STEAMDIRS := $(LINUXDIRS) $(JACKDIRS) $(RTAUDIODIRS) $(RTMIDIDIRS) $(SDLDIRS)
 #X64DIRS := $(LINUXDIRS) $(RTMIDIDIRS) $(SDL2DIRS) $(SDL2AUDIODIRS)
 X64DIRS := $(LINUXDIRS) $(DUMMYMIDIDIRS) $(SDL2DIRS) $(SDL2AUDIODIRS)
@@ -127,7 +128,7 @@ CAANOODIRS := \
 	../sources/Adapters/SDL/GUI \
 	../sources/Adapters/SDL/Timer
 
-DINGOODIRS := \
+DINGUXDIRS := \
 	. \
 	../sources/Adapters/DINGOO/Main \
 	../sources/Adapters/Unix/FileSystem \
@@ -140,11 +141,19 @@ DINGOODIRS := \
 	../sources/Adapters/SDL/Process \
 	../sources/Adapters/SDL/GUI \
 	../sources/Adapters/SDL/Timer
+	
+DINGUXAUDIODIRS := \
+	../sources/Adapters/DINGOO/Midi \
+	../sources/Adapters/DINGOO/Audio
+	
+DUMMYMIDIDIRS := \
+	../sources/Adapters/Dummy/Midi
 
-RS97DIRS := $(DINGOODIRS)
-BITTBOYDIRS := $(DINGOODIRS)
-MIYOODIRS := $(DINGOODIRS)
-PLUSHDIRS := $(MIYOODIRS)
+BITTBOYDIRS := $(DINGUXDIRS) $(DINGUXAUDIODIRS)
+DINGOODIRS := $(DINGUXDIRS) $(DINGUXAUDIODIRS) $(DUMMYMIDIDIRS)
+MIYOODIRS := $(DINGUXDIRS) $(DUMMYMIDIDIRS)
+RG35XXGDIRS := $(MIYOODIRS)
+RS97DIRS := $(DINGUXDIRS) $(DINGUXAUDIODIRS)
 
 GP2XDIRS := \
 	. \
@@ -313,6 +322,7 @@ SDLAUDIOFILES := \
 DEBFILES := $(DBFILES) $(RTAUDIOFILES) $(RTMIDIFILES) $(JACKFILES)
 BEAGLEBOARDFILES := $(LINUXFILES) $(DUMMYMIDIFILES)
 RASPIFILES := $(LINUXFILES) $(RTAUDIOFILES) $(RTMIDIFILES) $(JACKFILES)
+RG35XXSFILES := $(LINUXFILES) $(SDLAUDIOFILES) $(DUMMYMIDIFILES)
 STEAMFILES := $(LINUXFILES) $(RTAUDIOFILES) $(RTMIDIFILES) $(JACKFILES)
 #X64FILES := $(LINUXFILES) $(RTMIDIFILES) $(SDLAUDIOFILES)
 X64FILES := $(LINUXFILES) $(SDLAUDIOFILES) $(DUMMYMIDIFILES)
@@ -400,7 +410,7 @@ MIYOOFILES := \
 	MIYOOSystem.o \
 	SDLAudio.o
 
-PLUSHFILES = $(MIYOOFILES)
+RG35XXGDIRS = $(MIYOOFILES)
 
 NDSFILES := \
 	NDSmain.o \
