Workflows: deb target needs pkgconf
Now that we are using pkg-config to set the lib and include files
for the deb target we need to make sure its installed on the CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,7 +82,7 @@ jobs:
           pip install Pillow
           sudo dpkg --add-architecture i386
           sudo apt update
-          sudo apt install -y make gcc-multilib g++-multilib libsdl1.2-dev:i386 libasound2-plugins:i386 libjack-dev:i386
+          sudo apt install -y make pkgconf gcc-multilib g++-multilib libsdl1.2-dev:i386 libasound2-plugins:i386 libjack-dev:i386
 
       - name: Build DEB
         working-directory: projects
