--- a/projects/Makefile.RG35XXG
+++ b/projects/Makefile.RG35XXG
@@ -29,7 +29,7 @@ CXXFLAGS:=	$(CFLAGS) -std=gnu++03
 LIBS	:=	$(SDL_LIBS) -lpthread
 LIBDIRS	:=	$(DEKVIT)/usr/lib
 LIBDIRS	+=	$(DEKVIT)/usr/include
-OUTPUT := ../lgpt-rg35xx
+OUTPUT := ../lgpt-rg35xxG
 EXTENSION:= elf
 
 %.elf: $(OFILES)
